# eversports-scraping

./: .gitignore  LICENSE  Makefile  README.md  main.py  persist.py  pyproject.toml  requirements-dev.txt  requirements.txt  scraper.py  telegram_notifier.py
.github/workflows/: ci.yml  scrape.yml
data/: availability.json  report.json
docs/: index.html
docs/data/: availability.json  report.json
eversports_scraper/: __main__.py  cli.py  config.py  main.py  models.py  persist.py  run.py  scraper.py  telegram_notifier.py
tests/: test_cli.py  test_main.py  test_parsing.py  test_persist.py  test_run.py  test_scraper.py  test_telegram_notifier.py
