[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eversports_scraper"
version = "0.1.0"
description = "A scraper for Eversports badminton courts."
requires-python = ">=3.8"
dependencies = [
    "requests",
    "cloudscraper",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eversports_scraper*"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
